NEON-778 -- Map no longer breaks on repositioning

--- a/widgets/map/src/main/webapp/css/map.css
+++ b/widgets/map/src/main/webapp/css/map.css
@@ -18,12 +18,6 @@ img {
     bottom: 0;
 }
 
-#map {
-    /*height cannot be 100% because of the options bar*/
-    height: 90%;
-    width: 100%;
-}
-
 .functions-bar {
     position: fixed;
     top: 5px;
